Image overlap fixed

--- a/src/assets/scss/components/project/_imagecard.scss
+++ b/src/assets/scss/components/project/_imagecard.scss
@@ -14,7 +14,7 @@
     position: absolute;
     top: 70px;
     left: -20px;
-    z-index: 10;
+    // z-index: 10;
   }
   &__two {
     position: absolute;
